examples/c/error-codes/violates-constraint/fatal/CV-TDG5-bad-static.output
CV-TDG5-bad-static.c:1:1: error: Function parameter appears with storage class other than register.
  Constraint violation (CV-TDG5).
   see C11 section 6.7.6.3:2 http://rvdoc.org/C11/6.7.6.3
   see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
Translation failed (config dumped). Run kcc -d CV-TDG5-bad-static.c to see commands run.
