examples/c/error-codes/violates-constraint/fatal/CV-TDG5-bad-static.c
void foo(auto int x) {}

int main() {
}
